--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <nav>
         <div class="nav-container">
             <div class="nav-left">
-                <a href="#" class="nav-link">Accueil</a>         
+                <a href="#" class="nav-link">Accueil</a>        
+            </div>
             <div class="nav-center">
                 <img src="https://i.imgur.com/1UziwHJ.png" alt="Logo Anniversaire TONE" class="logo">
             </div>
@@ -31,31 +32,32 @@
             <a href="quizz.html" class="grid-button">
                 <span class="icon-placeholder"><img src="https://static-cdn.jtvnw.net/emoticons/v2/302234940/static/light/3.0" alt=""></span>
             </a>
-            <a href="page2.html" class="grid-button">
+            <a href="#" class="grid-button">
                 <span class="icon-placeholder">Icône 2</span>
             </a>
-            <a href="page3.html" class="grid-button">
+            <a href="#" class="grid-button">
                 <span class="icon-placeholder">Icône 3</span>
             </a>
-            <a href="page4.html" class="grid-button">
+            <a href="#" class="grid-button">
                 <span class="icon-placeholder">Icône 4</span>
             </a>
-            <a href="page5.html" class="grid-button">
+            <a href="#" class="grid-button">
                 <span class="icon-placeholder">Icône 5</span>
             </a>
-            <a href="page6.html" class="grid-button">
+            <a href="#" class="grid-button">
                 <span class="icon-placeholder">Icône 6</span>
             </a>
-            <a href="page7.html" class="grid-button">
+            <a href="#" class="grid-button">
                 <span class="icon-placeholder">Icône 7</span>
             </a>
-            <a href="page8.html" class="grid-button">
+            <a href="#" class="grid-button">
                 <span class="icon-placeholder">Icône 8</span>
             </a>
-            <a href="page9.html" class="grid-button">
+            <a href="#" class="grid-button">
                 <span class="icon-placeholder">Icône 9</span>
             </a>
         </div>
     </div>
 </body>
+
 </html>
