--- a/index.html
+++ b/index.html
@@ -17,44 +17,42 @@
                 <img src="https://i.imgur.com/1UziwHJ.png" alt="Logo Anniversaire TONE" class="logo">
             </div>
             <div class="nav-right">
-                <a href="#" class="nav-link">Règles</a>
-                <a href="#" class="nav-link">Participants</a>
-                <a href="#" class="nav-link">Contact</a>
+                <a href="#" class="nav-link">Aide</a>
             </div>
         </div>
     </nav>
 
     <!-- Contenu principal -->
     <div class="container">
-        <h1>Anniversaire TONE</h1>
+        <h1><img src="https://static-cdn.jtvnw.net/emoticons/v2/302234944/static/light/3.0" class="mirror-horizontal" style="width: 56px; height: 56px; vertical-align: middle;"> Anniversaire TONE <img src="https://static-cdn.jtvnw.net/emoticons/v2/302234944/static/light/3.0" style="width: 56px; height: 56px; vertical-align: middle;"></h1>
         
         <div class="button-grid">
             <a href="quizz.html" class="grid-button">
                 <span class="icon-placeholder"><img src="https://static-cdn.jtvnw.net/emoticons/v2/302234940/static/light/3.0" alt=""></span>
             </a>
             <a href="#" class="grid-button">
-                <span class="icon-placeholder">Icône 2</span>
+                <span class="icon-placeholder">2</span>
             </a>
             <a href="#" class="grid-button">
-                <span class="icon-placeholder">Icône 3</span>
+                <span class="icon-placeholder">3</span>
             </a>
             <a href="#" class="grid-button">
-                <span class="icon-placeholder">Icône 4</span>
+                <span class="icon-placeholder">4</span>
             </a>
             <a href="#" class="grid-button">
-                <span class="icon-placeholder">Icône 5</span>
+                <span class="icon-placeholder">5</span>
             </a>
             <a href="#" class="grid-button">
-                <span class="icon-placeholder">Icône 6</span>
+                <span class="icon-placeholder">6</span>
             </a>
             <a href="#" class="grid-button">
-                <span class="icon-placeholder">Icône 7</span>
+                <span class="icon-placeholder">7</span>
             </a>
             <a href="#" class="grid-button">
-                <span class="icon-placeholder">Icône 8</span>
+                <span class="icon-placeholder">8</span>
             </a>
             <a href="#" class="grid-button">
-                <span class="icon-placeholder">Icône 9</span>
+                <span class="icon-placeholder">9</span>
             </a>
         </div>
     </div>
