--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="#" class="nav-link">Accueil</a>        
             </div>
             <div class="nav-center">
-                <img src="https://i.imgur.com/1UziwHJ.png" alt="Logo Anniversaire TONE" class="logo">
+                <a href="#" class="nav-link">JOYEUX ANNIVERSAIRE TONE</a>        
             </div>
             <div class="nav-right">
                 <a href="#" class="nav-link">Aide</a>
@@ -24,7 +24,7 @@
 
     <!-- Contenu principal -->
     <div class="container">
-        <h1><img src="https://static-cdn.jtvnw.net/emoticons/v2/302234944/static/light/3.0" class="mirror-horizontal" style="width: 56px; height: 56px; vertical-align: middle;"> Anniversaire TONE <img src="https://static-cdn.jtvnw.net/emoticons/v2/302234944/static/light/3.0" style="width: 56px; height: 56px; vertical-align: middle;"></h1>
+        <h1><img src="https://static-cdn.jtvnw.net/badges/v1/1a556f0e-af34-41f9-a74c-cd7c3b07712f/3" style="width: 56px; height: 56px; vertical-align: middle;"> Anniversaire TONE <img src="https://static-cdn.jtvnw.net/badges/v1/1a556f0e-af34-41f9-a74c-cd7c3b07712f/3" class="mirror-horizontal" style="width: 56px; height: 56px; vertical-align: middle;"></h1>
         
         <div class="button-grid">
             <a href="quizz.html" class="grid-button">
