--- a/quizz.html
+++ b/quizz.html
@@ -305,7 +305,7 @@
             titleElement.innerHTML = '<img src="https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_1a48f8cf505246f0b205799c73829cfb/static/light/3.0" style="width: 56px; height: 56px; vertical-align: middle;"> Bonne réponse <img src="https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_1a48f8cf505246f0b205799c73829cfb/static/light/3.0" style="width: 56px; height: 56px; vertical-align: middle;">';
             titleElement.className = 'correct-title';
         } else {
-            titleElement.textContent = 'Mauvaise réponse';
+            titleElement.innerHTML = '<img src="https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_0b9b5b51652f4617bdad48735ed00775/static/light/3.0" style="width: 56px; height: 56px; vertical-align: middle;"> Mauvaise réponse <img src="https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_0b9b5b51652f4617bdad48735ed00775/static/light/3.0" style="width: 56px; height: 56px; vertical-align: middle;">';
             titleElement.className = 'incorrect-title';
         }
         
@@ -319,4 +319,5 @@
 </body>
 
 </html>
+
 
