--- a/quizz.html
+++ b/quizz.html
@@ -302,10 +302,10 @@
         document.getElementById('popupText').textContent = text;
         
         if (isCorrect) {
-            titleElement.innerHTML = '<img src="https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_1a48f8cf505246f0b205799c73829cfb/static/light/3.0" style="width: 56px; height: 56px; vertical-align: middle; filter: blur(1px);"> Bonne réponse <img src="https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_1a48f8cf505246f0b205799c73829cfb/static/light/3.0" class="mirror-horizontal" style="width: 56px; height: 56px; vertical-align: middle; filter: blur(1px);">';
+            titleElement.innerHTML = '<img src="https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_1a48f8cf505246f0b205799c73829cfb/static/light/3.0" style="width: 56px; height: 56px; vertical-align: middle; box-shadow: 0 0 3px rgba(255,255,255,0.8);"> Bonne réponse <img src="https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_1a48f8cf505246f0b205799c73829cfb/static/light/3.0" class="mirror-horizontal" style="width: 56px; height: 56px; vertical-align: middle; box-shadow: 0 0 3px rgba(255,255,255,0.8);">';
             titleElement.className = 'correct-title';
         } else {
-            titleElement.innerHTML = '<img src="https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_0b9b5b51652f4617bdad48735ed00775/static/light/3.0" style="width: 56px; height: 56px; vertical-align: middle; filter: blur(1px);"> Mauvaise réponse <img src="https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_0b9b5b51652f4617bdad48735ed00775/static/light/3.0" class="mirror-horizontal" style="width: 56px; height: 56px; vertical-align: middle; filter: blur(1px);">';
+            titleElement.innerHTML = '<img src="https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_0b9b5b51652f4617bdad48735ed00775/static/light/3.0" style="width: 56px; height: 56px; vertical-align: middle; box-shadow: 0 0 3px rgba(255,255,255,0.8);"> Mauvaise réponse <img src="https://static-cdn.jtvnw.net/emoticons/v2/emotesv2_0b9b5b51652f4617bdad48735ed00775/static/light/3.0" class="mirror-horizontal" style="width: 56px; height: 56px; vertical-align: middle; box-shadow: 0 0 3px rgba(255,255,255,0.8);">';
             titleElement.className = 'incorrect-title';
         }
         
@@ -319,6 +319,7 @@
 </body>
 
 </html>
+
 
 
 
