--- a/quizz.html
+++ b/quizz.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QUIZZ</title>
+    <link rel="icon" href="images/LOGO.png" type="image/png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -14,7 +15,7 @@
                 <a href="index.html" class="nav-link">Accueil</a>
             </div>
             <div class="nav-center">
-                <img src="https://i.imgur.com/1UziwHJ.png" alt="Logo Anniversaire TONE" class="logo">
+                <img src="images/LOGO.png" alt="Logo Anniversaire TONE" class="logo">
             </div>
             <div class="nav-right">
                 <a href="#" class="nav-link">Règles</a>
@@ -319,9 +320,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
