--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a href="#" class="nav-link">Accueil</a>        
             </div>
             <div class="nav-center">
-                <a href="#" class="nav-link">JOYEUX ANNIVERSAIRE TONE</a>        
+                <img src="images/LOGO.png" alt="Logo Anniversaire TONE" class="logo">
             </div>
             <div class="nav-right">
                 <a href="#" class="nav-link">Aide</a>
@@ -25,7 +25,7 @@
 
     <!-- Contenu principal -->
     <div class="container">
-        <h1><img src="https://static-cdn.jtvnw.net/badges/v1/1a556f0e-af34-41f9-a74c-cd7c3b07712f/3" style="width: 56px; height: 56px; vertical-align: middle;"> Anniversaire TONE <img src="https://static-cdn.jtvnw.net/badges/v1/1a556f0e-af34-41f9-a74c-cd7c3b07712f/3" class="mirror-horizontal" style="width: 56px; height: 56px; vertical-align: middle;"></h1>
+        <h1><img src="https://static-cdn.jtvnw.net/badges/v1/1a556f0e-af34-41f9-a74c-cd7c3b07712f/3" style="width: 56px; height: 56px; vertical-align: middle;"> JOYEUX ANNIVERSAIRE TONE <img src="https://static-cdn.jtvnw.net/badges/v1/1a556f0e-af34-41f9-a74c-cd7c3b07712f/3" class="mirror-horizontal" style="width: 56px; height: 56px; vertical-align: middle;"></h1>
         
         <div class="button-grid">
             <a href="quizz.html" class="grid-button">
