--- a/index.html
+++ b/index.html
@@ -9,19 +9,7 @@
 </head>
 <body>
     <!-- Barre de navigation -->
-    <nav>
-        <div class="nav-container">
-            <div class="nav-left">
-                <a href="#" class="nav-link">Accueil</a>        
-            </div>
-            <div class="nav-center">
-                <img src="images/LOGO.png" alt="Logo Anniversaire TONE" class="logo">
-            </div>
-            <div class="nav-right">
-                <a href="#" class="nav-link">Aide</a>
-            </div>
-        </div>
-    </nav>
+    <div id="nav-placeholder"></div>
 
     <!-- Contenu principal -->
     <div class="container">
@@ -57,6 +45,13 @@
             </a>
         </div>
     </div>
+
+    <script>
+        // Charger la navigation depuis le template
+        fetch('templates/header.html')
+            .then(response => response.text())
+            .then(data => document.getElementById('nav-placeholder').innerHTML = data);
+    </script>
 </body>
 
 </html>
