--- a/quizz.html
+++ b/quizz.html
@@ -18,7 +18,7 @@
         <div class="quiz-container" id="quizContainer">
             <!-- ========== DEV ONLY - A SUPPRIMER POUR LA VERSION FINALE ========== -->
             <div style="margin-bottom: 20px; text-align: center;">
-                <label for="questionSelector" style="color: #ff4a4a; font-weight: bold; margin-right: 10px;">🔧 TEST - Aller à la question :</label>
+                <label for="questionSelector" style="color: #ff4a4a; font-weight: bold; margin-right: 10px;">🔧 TEMPORAIRE - Aller à la question :</label>
                 <select id="questionSelector" style="padding: 8px; border-radius: 5px; background: #1a2940; color: #fff; border: 2px solid #4a9eff; font-size: 16px; cursor: pointer;">
                     <!-- Les options seront générées par JavaScript -->
                 </select>
